[package]
name = "fpd"
version = "0.69.420"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { "version" = "0.11.22", features = ["blocking"] }
sanitize-filename = "0.5.0"
serde_json = "1.0.108"


[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
